[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
lazy_static = "1.5.0"
num-traits = "0.2.15"
rayon = "1.10.0"
regex = "1.11.1"
rustc-hash = "2.0.0"
sscanf = "0.4.1"
