[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "6.1.0"
indexmap = "2.7.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
num-traits = "0.2.15"
pathfinding = "4.12.0"
petgraph = "0.6.5"
rayon = "1.10.0"
regex = "1.11.1"
rustc-hash = "2.0.0"
sscanf = "0.4.1"
